     error messages also using stdout, configuration file warnings being the
     most likely source, now uses stderr in image output
   - Configuration validation was too heavily limiting and enforcing image
     output 5 minute graph related configuration options for combinations that
     would have resulted in usable images
 - New
   - SQLite version is visible in --version outputs
   - Database is vacuumed during daemon startup and reload, behaviour is
     configurable using VacuumOnStartup and VacuumOnHUPSignal configuration
     options
   - Add configuration option InterfaceOrder for controlling the interface
     order in outputs with multiple interfaces
   - Used data retention configuration is made visible during daemon startup
     and after configuration reloads
   - Daemon will no longer start if all data resolutions have been disabled
     in the configuration file
 - Notes
   - "Not enough data available yet." message has been replaced with
     "No data. Timestamp of last update is same YYYY-MM-DD HH:MM:SS as of
     database creation." to better explain the reason why there's nothing to
     show, this message is expected to disappear within configured
     SaveInterval if the interface is active


2.10 / 22-Oct-2022

 - Fixed
   - BandwidthDetection in BSD wasn't correctly converting kernel reported
     bits per second values to Mbits per second resulting in a sanity check
     being triggered and detected values not being used expect for PPPoE
     interfaces which incorrectly were detected as 64000 Mbit
   - Image output of 5 minute graph wasn't possible if data retention of the
     5 minute time period was configured as unlimited
     (pull request by Sebastian Lechte)
   - Estimates and average rates weren't calculated correctly for daily,
     monthly and yearly time periods when monitoring of the interface had been
     started during the ongoing time period
   - Estimates weren't being shown in summary output when OutputStyle or